--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -17,3 +17,17 @@
 .about p {
   font-size: 1.2em;
 }
+
+@media only screen and (max-width: 600px) {
+  .about {
+    padding: 1em;
+  }
+
+  .about h2 {
+    font-size: 2em;
+  }
+
+  .about p {
+    font-size: 1em;
+  }
+}
